Fix mobile overflow (hopefully

--- a/src/scss/parts/phpsess.scss
+++ b/src/scss/parts/phpsess.scss
@@ -93,7 +93,8 @@
         }
         .description {
             .text {
-                padding-top: 0;
+                width: 100%;
+                padding: 0 10%;
             }
         }
         &::before {
